--- a/projet/index.html
+++ b/projet/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
     crossorigin=""/>
+    <link rel="stylesheet" href="src/style.css">
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>   
@@ -23,7 +24,6 @@
 </head>
 <body>
 	<h1>Trajets de taxis New York mai 2013</h1>
-	<div id="app"></div>
     <div id="map" style="height: 450px;"></div>
     <div id="slider"></div>
     
