--- a/projet/index.html
+++ b/projet/index.html
@@ -24,8 +24,15 @@
 </head>
 <body>
 	<h1>Trajets de taxis New York mai 2013</h1>
+    <h2>Point de pickup des taxis</h2>
     <div id="map" style="height: 450px;"></div>
+    <div id="viz_area" height=700 width=700>
+    <button id="play">Play</button>
+    <button id="pause">Pause</button>
+    <button id="stop">Stop</button>
     <div id="slider"></div>
+    <h2>Points de dropoff des taxis</h2>
+    <div id="map2" style="height: 450px;"></div>
     
     <script type="module" src="src/index.js"></script>
 </body>
