--- a/projet/index.html
+++ b/projet/index.html
@@ -15,24 +15,25 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/heatmap.js@2.0.8/build/heatmap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script> -->
     
- 
-    <style>
-        #map{ height: 500px;}
-    </style>
-	
+
 	
 </head>
 <body>
 	<h1>Trajets de taxis New York mai 2013</h1>
     <h2>Point de pickup des taxis</h2>
-    <div id="map" style="height: 450px;"></div>
-    <div id="viz_area" height=700 width=700>
-    <button id="play">Play</button>
+<div class="container">
+    <div id="map" class="container" style="height: 450px; width: 600px;"></div>
+</div>
+<button id="play">Play</button>
     <button id="pause">Pause</button>
     <button id="stop">Stop</button>
-    <div id="slider"></div>
+   
+    <!--<div id="slider"></div>-->
     <h2>Points de dropoff des taxis</h2>
-    <div id="map2" style="height: 450px;"></div>
+<div class="container">
+    <div id="map2" class="container" style="height: 450px; width: 600px;"></div>
+</div>
+<!--<div id="viz_area" height=700 width=700>-->
     
     <script type="module" src="src/index.js"></script>
 </body>
