--- a/projet/index.html
+++ b/projet/index.html
@@ -24,9 +24,11 @@
 <div class="container">
     <div id="map" class="container" style="height: 450px; width: 600px;"></div>
 </div>
+<h2 id="paragraphe"></h2>
 <button id="play">Play</button>
     <button id="pause">Pause</button>
     <button id="stop">Stop</button>
+
    
     <!--<div id="slider"></div>-->
     <h2>Points de dropoff des taxis</h2>
