--- a/projet/index.html
+++ b/projet/index.html
@@ -24,10 +24,11 @@
 <div class="container">
     <div id="map" class="container" style="height: 450px; width: 600px;"></div>
 </div>
-<h2 id="paragraphe"></h2>
+
 <button id="play">Play</button>
     <button id="pause">Pause</button>
     <button id="stop">Stop</button>
+    <h2 id="paragraphe"></h2>
 
    
     <!--<div id="slider"></div>-->
@@ -35,6 +36,10 @@
 <div class="container">
     <div id="map2" class="container" style="height: 450px; width: 600px;"></div>
 </div>
+<button id="play2">Play</button>
+    <button id="pause2">Pause</button>
+    <button id="stop2">Stop</button>
+    <h3 id="paragraphe2"></h3>
 <!--<div id="viz_area" height=700 width=700>-->
     
     <script type="module" src="src/index.js"></script>
