--- a/projet/index.html
+++ b/projet/index.html
@@ -19,8 +19,8 @@
 	
 </head>
 <body>
-	<h1>Trajets de taxis à New York en mai 2013</h1>
-   
+	<h1>Trajets de taxis à New York le 14 mai 2013</h1>
+    <img src="./src/img/bande-taxi.svg" alt="">
     <div id="frame1">
 <div class="container">
     <div class="titre">
@@ -55,6 +55,19 @@
     </div>
 </div>
 
+</div>
+
+<div id="frame2">
+    <h1>Fun facts sur les taxis new yorkais</h1>
+    <ul>
+        <li>New York City a un peu plus de 13,000 taxis jaunes</li>
+        <li>The first taxis in the U.S. were painted red and green</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </div>
     
 <!--<div id="viz_area" height=700 width=700>-->
