moins de data et plus de temps

--- a/projet/index.html
+++ b/projet/index.html
@@ -58,16 +58,24 @@
 </div>
 
 <div id="frame2">
-    <h1>Fun facts sur les taxis new yorkais</h1>
+    <h1>Observations</h1>
+    <h2> Observations sur les points de pickup</h2>
     <ul>
-        <li>New York City a un peu plus de 13,000 taxis jaunes</li>
-        <li>The first taxis in the U.S. were painted red and green</li>
-        <li></li>
-        <li></li>
-        <li></li>
+         <li>Les points de pickup sont concentrés dans Manhattan et dans une moindre mesure dans Brooklyn</li>
+         <li>À partir de 7h du matin, la demande augmente drastiquement</li>  
+        
+    </ul>
+    <h2>Observations sur les points de dropoff</h2>
+    <ul>
         <li></li>
         <li></li>
     </ul>
+    <h2>Observations générales</h2>
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+
 </div>
     
 <!--<div id="viz_area" height=700 width=700>-->
