--- a/projet/index.html
+++ b/projet/index.html
@@ -63,17 +63,20 @@
     <ul>
          <li>Les points de pickup sont concentrés dans Manhattan et dans une moindre mesure dans Brooklyn</li>
          <li>À partir de 7h du matin, la demande augmente drastiquement</li>  
+         <li>Plus on avance dans la journée, plus la zone de pickup s'élargit</li>
         
     </ul>
     <h2>Observations sur les points de dropoff</h2>
     <ul>
-        <li></li>
-        <li></li>
+        <li>La zone des dropoff est beaucoup plus élargie</li>
+        <li>Les points de chaleur apparaissent plus tard dans la journée et moins fort</li>
+        
     </ul>
     <h2>Observations générales</h2>
     <ul>
-        <li></li>
-        <li></li>
+        <li>Les points les plus chauds sont les mêmes pour les pickup et les dropoff</li>
+        <li>Les deux aéroports ressortent très fort dans les deux cas</li>
+        <li>Manhattan semble être l'endroit ou les gens prennent le plus des taxis</li>
     </ul>
 
 </div>
