--- a/projet/index.html
+++ b/projet/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Projet</title>
+	<title>Taxis NYC</title>
+    <link rel="icon" type="image/x-icon" href="./src/img/taxi.ico">
 
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
