--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Taxis NYC</title>
     <link rel="icon" type="image/x-icon" href="./src/img/taxi.ico">
+    <link href="../src/img/avion.png">
     <link rel="stylesheet" href="src/style.css">
     
 </head>
